<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- App Default -->
    <string name="app_name">ExShipper Logistics</string>
    <string name="action_settings">Settings</string>
    <string name="title">ExShipper Logistics Application</string>
    <string name="app_exit">Exit</string>
    <string name="exshipper_fragment_title">Technical Support by WINEver</string>
    <string name="technical_support_phone">Phone: 1-407-565-5133</string>
    <string name="technical_support_email">Email: winever.tw@gmail.com</string>

    <!-- items selector -->
    <string name="menu_spearnet_packages_pickup_handler">Spearnet</string>
    <string name="menu_general_clients_packages_pickup_handler">General Clients</string>
    <string name="menu_tw_custom_entry_packages_handler">TW Custom Entry</string>

    <!-- Login -->
    <string name="login_fragment_title">User Login</string>
    <string name="login_introduction">Please submit your account and password</string>
    <string name="submit">Submit</string>
    <string name="login_account">Account</string>
    <string name="login_password">Password</string>

    <!-- Spearnet -->
    <string name="spearnet_fragment_title">Pickup Service for Spearnet</string>
    <string name="spearnet_app_instruction"></string>
    <string name="spearnet_fragment_title">Spearnet</string>
    <string name="spearnet_add_suda_tracking_number">Add SUDA Tracking NO.</string>
    <string name="btn_scan">Scan SUDA Barcode</string>
    <string name="btn_get_custom_number">Get Custom Entry Number</string>
    <string name="btn_submit_suda_tracking_number">Submit SUDA Numbers</string>
    
    <!-- General Clients -->
    <string name="general_clients_title">Pickup Service for General Clients</string>
    <string name="general_clients_add_suda_tracking_number">Add SUDA Tracking NO.</string>

    <!-- TW Custom Entry -->
    <string name="tw_custom_entry_app_instruction"></string>
    <string name="btn_add_new_packages_set">Add New Package Set</string>
    <string name="btn_submit_packages_sets">Submit Packages Info</string>

</resources>