<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ExShipperBarcodeReaderActivity" >

    <Button 
        android:id="@+id/btn_get_custom_number"
        android:layout_width="300sp"
        android:layout_height="50sp"
        android:textAlignment="center"
        android:text="@string/btn_get_custom_number"/>
    
    <TextView 
        android:id="@+id/txt_custom_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_get_custom_number"/>
    
    <Button 
        android:id="@+id/btn_scan"
        android:layout_width = "100sp"
        android:layout_height= "50sp"
        android:text="@string/btn_scan"
        android:layout_below="@+id/txt_custom_number"/>
    
    <TextView 
        android:id="@+id/txt_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_scan"
        android:textColor="#000"/>
    
    <TextView 
        android:id="@+id/txt_total_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_result"
        android:textColor="#00f"/>
    
    <LinearLayout
        android:id="@+id/layout_suda_tracking_numbers_list"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_total_amount" >
</LinearLayout>
    
    <Button
        android:id="@+id/btn_submit_suda_tracking_number"
        android:layout_width="100sp"
        android:layout_height="50sp"
        android:layout_below="@+id/layout_suda_tracking_numbers_list"
        android:text="@string/btn_submit_suda_tracking_number"/>
    
    <ProgressBar 
        android:id="@+id/progress_bar_get_customer_entry_number"
        style="@android:style/Widget.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"/>

</RelativeLayout>
